--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [main]
+    branches: "*"
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
