--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
           poetry run pytest
       - name: Lint with flake8
         run: |
-          poetry run flake8 --count --show-source --exit-zero --statistics --config setup.cf
+          poetry run flake8 --count --show-source --exit-zero --statistics --config setup.cfg
