--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,16 @@ exclude =
 filename =
     ./cndctl/*.py
 max-line-length = 120
-max-complexity = 10
+max-complexity = 15
 ignore =
+    # NOTE(Buzz): refactor時にignoreから外す
+    # C901: line too complex
+    C901,
     # E501: line too long
     E501,
     # W503: line break before binary operator
     W503,
+jobs = auto
 enable-extensions =
     # PyFlakes checks
     PyFlakesChecker,
